<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Meet Minds</string>
    <string name="app_logo">Meet Minds Logo</string>
    <string name="tagline">Connect with creative minds in music and art</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="welcome_message">Hello! Welcome to Meet Minds</string>
    <string name="login_heading">Login</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="show_password">Show Password</string>
    <string name="signup_heading">Sign Up</string>
    <string name="name_hint">Enter your name</string>
    <string name="signup">Sign Up</string>


        <string name="profile_desc">Profile Section</string>
        <string name="logout_desc">Logout Option</string>
        <string name="app_logo_desc">App Logo</string>
        <string name="dashboard_title">Dashboard</string>
    <string name="calendar_app">CalendarApp</string>
    <string name="schedule_text">Schedule</string>
    <string name="delete_button_desc">Delete Task</string>

    <string name="groups_app">Groups</string>
    <string name="places_name">group match</string>




</resources>

